[package]
name = "blog_os"
version = "0.1.0"
edition = "2018"

[package.metadata.bootimage]
build-command = ["xbuild"]
run-command = ["qemu-system-x86_64","-drive","format=raw,file={}"]
test-args = ["-device","isa-debug-exit,iobase=0xf4,iosize=0x04"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.dev]
panic = "abort"
[profile.release]
panic = "abort"
[dependencies]
bootloader = "0.9.3"
volatile = "0.2.6"
spin = {version = "0.9.4"}
x86_64 = "0.14.2"
[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]
